# font-length

./: README.md  pyproject.toml
docs/: joyo_lengths_ki-cho-jis_desc.md  tutorial_joyo_full_length.md  tutorial_utsu_length.md
examples/: measure_character.py
src/font_length/: __init__.py  cli.py  config.py  joyo.py  measure.py  morph.py  raster.py  runner.py  svgout.py  vectorize.py
tests/: test_measure.py  test_morph.py  test_vectorize.py
